<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">FApp</string>
    <string name="action_settings">Settings</string>
    <string name="addContainer">Add Container</string>
    <string name="title_activity_container">Container</string>
    <string name="addItem" translatable="false">Add food</string>
    <string name="title_activity_search_page">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="containerText">Container :</string>
    <string name="foodTypeTitle">Type of food :</string>
    <string name="seekNbDaysPeremp">Number of days before peremption</string>
    <string name="validateBtn">Validate</string>
    <string name="fastSearchTitle">Fast search</string>
    <string name="fastSearchBtn">Almost expired food</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="columnName">Name</string>
    <string name="columnQty">Quantity</string>
    <string name="columnExpiration">Expiration Date</string>
    <string name="title_activity_stock">Stock</string>
    <string name="columnContainer">Container</string>
    <string name="newContEditText">New container</string>
    <string name="type_container_frigo">Refrigerator</string>
    <string name="type_container_freezer">Freezer</string>
    <string name="type_container_prompt">Type container</string>
    <string name="container_name_empty">Name container is empty!</string>
    <string name="toast_add_container">New container has been added</string>
    <string name="label_edit_name_container">Name container</string>
    <string name="edit_name_container">Edit name</string>
    <string name="delete_container">Delete container (irreversible)</string>
    <string name="back">Back</string>
    <string name="title_dialog_edit_container">Modification of</string>
    <string name="title_dialog_confirm_deleting">Confirm deleting</string>
    <string name="message_dialog_confirm_deleting">You want deleting the container :</string>
    <string name="message2_dialog_confirm_deleting">(Irreversible action)</string>
    <string name="valid_dialog_confirm_deleting">Yes</string>
    <string name="no_dialog_confirm_deleting">No</string>
    <string name="bnt_valid_add_item">Add Item</string>
    <string name="error_item_name">Please, give a name for item !</string>
    <string name="error_item_quantity">Please, give a quantity not null !</string>
    <string name="error_item_expired_date">Please, choose an expired date!</string>
    <string name="title_dialog_add_item">New Item</string>
    <string name="label_type_item">Type:</string>
    <string name="bnt_valid_edit">Edit</string>
    <string name="bnt_delete_item">Delete item</string>
    <string name="title_dialog_edit_item">Modification of</string>
    <string name="label_edit_type_item">Type:</string>
    <string name="label_edit_qty_item">Quantity:</string>
    <string name="label_edit_expired_date_item">Expired date:</string>

</resources>
