<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.henallux.alex.fapp.SearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/appTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSearchName"
        android:queryHint="@string/search"
        android:layout_alignTop="@+id/editSearchName"
        android:layout_centerHorizontal="true"
        android:hint="@string/SearchName"
        android:layout_below="@+id/appTitle"
        android:layout_marginTop="20dp"
        android:text="@string/search" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSearchContainer"
        android:layout_below="@+id/editSearchName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/containerText"
            android:id="@+id/checkBoxSearchContainer"
            android:checked="false" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinContainer"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSearchTypeItem"
        android:layout_below="@+id/layoutSearchContainer"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodTypeTitle"
            android:id="@+id/checkBoxSearchTypeItem"
            android:checked="false" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTypeFood"
            android:spinnerMode="dropdown" />
     </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/seekNbDaysPeremp"
        android:id="@+id/seekNbDays"
        android:layout_below="@+id/layoutSearchTypeItem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarNbDays"
        android:max="60"
        android:progress="1"
        android:indeterminate="false"
        android:layout_below="@+id/seekNbDays"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/seekNbDays"
        android:layout_alignLeft="@id/seekNbDays"
        android:layout_alignEnd="@id/seekNbDays"
        android:layout_alignRight="@id/seekNbDays"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validateBtn"
        android:id="@+id/completeSearchBtn"
        android:layout_below="@+id/seekBarNbDays"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fastSearchTitle"
        android:id="@+id/fastSearchTitle"
        android:layout_above="@+id/fastSearchBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fastSearchBtn"
        android:id="@+id/fastSearchBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/showNbDays"
        android:layout_below="@+id/layoutSearchTypeItem"
        android:layout_toRightOf="@+id/seekNbDays"
        android:layout_toEndOf="@+id/seekNbDays"
        android:layout_marginLeft="10dp"
        android:layout_alignBaseline="@id/seekNbDays"/>

</RelativeLayout>