<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.henallux.alex.fapp.SearchResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/titleApp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/columnName"
        android:id="@+id/colItemName"
        android:layout_below="@+id/titleApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/columnQty"
        android:id="@+id/colItemType"
        android:layout_below="@+id/titleApp"
        android:layout_toRightOf="@+id/colItemName"
        android:layout_toEndOf="@+id/colItemName"
        android:width="100dp"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/columnExpiration"
        android:id="@+id/colItemExpiredDate"
        android:layout_alignTop="@+id/colItemType"
        android:layout_toRightOf="@+id/colItemType"
        android:layout_toEndOf="@+id/colItemType"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewItems"
        android:layout_below="@+id/colItemName"
        android:layout_above="@+id/layoutAddItem"
        android:layout_marginTop="20dp" />

</RelativeLayout>